--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -124,3 +124,24 @@
     text-align: center;
   }
 }
+
+@media screen and (max-width: 768px) {
+  .about__container {
+    grid-template-columns: 350px;
+  }
+
+  .about__data::before {
+    left: 47%;
+  }
+
+  .about__data {
+    grid-template-columns: 1fr;
+    row-gap: 1.875rem;
+  }
+
+  .about__boxes {
+    grid-template-columns: repeat(1, 150px);
+    row-gap: 1.5rem;
+    justify-content: center;
+  }
+}
