--- a/src/components/contact/contact.css
+++ b/src/components/contact/contact.css
@@ -69,3 +69,9 @@
     text-align: center;
   }
 }
+
+@media screen and (max-width: 350px) {
+  .contact__container {
+    grid-template-columns: 1fr;
+  }
+}
