--- a/src/components/pricing/pricing.css
+++ b/src/components/pricing/pricing.css
@@ -77,3 +77,9 @@
     grid-template-columns: 310px;
   }
 }
+
+@media screen and (max-width: 350px) {
+  .pricing__container {
+    grid-template-columns: 1fr;
+  }
+}
